# cookiecutter-templates

cookiecutter-arduino/: cookiecutter.json
cookiecutter-arduino/templates/esp32/: sketch.ino
cookiecutter-arduino/templates/esp32s2/: arduino.json
cookiecutter-arduino/templates/esp32s3/: sketch.ino
cookiecutter-arduino/templates/nano/: arduino.json  sketch.ino
cookiecutter-arduino/{{ cookiecutter.project_name }}/: {{ cookiecutter.project_name }}.ino
cookiecutter-esphome/: cookiecutter.json
cookiecutter-esphome/templates/esp32s2mini/: diagram.json  esphome.yaml
cookiecutter-esphome/{{ cookiecutter.project_name }}/: diagram.json  wokwi.json  wokwi.toml  {{ cookiecutter.project_name }}.yaml
cookiecutter-esphomeold/: cookiecutter.json
cookiecutter-esphomeold/{{ cookiecutter.project_name }}/: {{ cookiecutter.project_name }}.yaml
cookiecutter-python/: cookiecutter.json
cookiecutter-python/hooks/: post_gen_project.py  pre_gen_project.py
cookiecutter-python/templates/: .vscode-launch-esphomedev.json  main-cli.py  pyproject-cli  pyproject-cli.toml  pyproject-esphomedev.toml  pyproject-nuitka.toml  pyproject-standard.toml
cookiecutter-python/{{ cookiecutter.project_name }}/: .gitignore  main.py  pyproject.toml
cookiecutter-python/{{ cookiecutter.project_name }}/_extra_files/esphomedev/: __init__.py  {{ cookiecutter.project_name }}.cpp  {{ cookiecutter.project_name }}.h
cookiecutter-python/{{ cookiecutter.project_name }}/_extra_files/esphomedevtest/: example.yaml  test_{{cookiecutter.project_name}}.py  test_{{cookiecutter.project_name}}.yaml
cookiecutter-wokwi/: cookiecutter.json
cookiecutter-wokwi-esp32/: cookiecutter.json
cookiecutter-wokwi-esp32/{{ cookiecutter.project_name }}/: README.md  diagram.json  pyproject.toml  wokwi.toml  {{ cookiecutter.project_name }}.yaml
cookiecutter-wokwi/templates/esp32/: arduino.json  sketch.ino
cookiecutter-wokwi/templates/esp32c3/: arduino.json
cookiecutter-wokwi/templates/esp32c3supermini/: sketch.ino
cookiecutter-wokwi/templates/esp32s2/: sketch.ino
cookiecutter-wokwi/templates/esp32s2mini/: diagram.json  sketch.ino  wokwi.toml
cookiecutter-wokwi/{{ cookiecutter.project_name }}/: diagram.json  wokwi.toml  {{ cookiecutter.project_name }}.ino
(+9 files in other folders)
