[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ili9341"
version = "0.0.2"
requires-python = "~= 3.11"
dependencies = [
    "pillow==10.2.0",
    "platformio",
    "poethepoet",
    "esphome"
]

[tool.poe.tasks]
run = "esphome compile {{ cookiecutter.project_name }}.yaml"